frontend/static/app.css
:root {
  font-family: Dosis, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body{ /*for header nav to not have margins*/
  margin: 0;
  height: 100vh;
}
/*For footer to be on the bottom
https://www.reddit.com/r/sveltejs/comments/16904vm/place_footer_at_end_of_page/
*/
html, body { min-height: 100vh; }
body footer { position: sticky; top: 100vh; }

h1 {
  line-height: 1.1;
}

.card {
  padding: 2em;
}

.center{
  text-align: center;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1.2rem;
  font-weight: 535;
  letter-spacing: 0.5px;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #0070BB;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #eaebec; /*#e3e4e8;*/ /*lavender*/
  }
  nav{
    background: #0257a5;
  }
}


@font-face {
  font-family: 'Dosis';
  src: url('Dosis-VariableFont_wght.ttf')  format('truetype'); /* Safari, Android, iOS */
}

h1, h2, input { /*davat na select nema smysl, option stejne ma system font no matter what*/
  font-family: 'Dosis';
}

input, label{
  font-weight: 500;
  font-size: 1.2rem;
}

p{
  font-size: 1.3rem;
  /*letter spacing 0.5px makes it look close to the brand manual*/
  letter-spacing: 0.5px;
  font-weight: 540;
}

